q14.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sega
spec:
  containers:
  - name: tails
    image: python
  - name: sonic
    image: nginx
