volPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydirpod
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers: 
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
  - name: html-updater
    image: alpine
    command: ["/bin/sh", "-c"]
    args:
      - while true; do date >> /html/index.html; sleep 10; done
    volumeMounts:
      - name: html
        mountPath: /html
