dummy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dummy
  name: dummy
spec:
  clusterIP: 10.8.4.200
  clusterIPs:
  - 10.8.4.200
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 30000-97
    port: 30000
    protocol: TCP
    targetPort: 97
  selector:
    app: dummy
    colour: green
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
