sample-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: service-test
spec:
  type: ClusterIP
  selector:
      colour: green
  ports:
  - name: http
    port: 8080
    targetPort: 80
