ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bananas
spec:
  rules:
  - host: "ckad-mock-exam-solution.com"
    http:
      paths:
      - pathType: Prefix
        path: "/video"
        backend:
          service:
            name: my-video-service
            port:
              number: 30093
